--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "lu-proxy-loader",
-  "version": "1.0.0",
-  "description": "proxy-loader for proxy file",
+  "version": "0.0.1",
+  "description": "proxy loader for webpack-loader",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:randoll127/lu-proxy-loader.git"
   },
   "author": "",
   "license": "ISC"
