--- a/package.json
+++ b/package.json
@@ -1,15 +1,44 @@
 {
-  "name": "lu-proxy-loader",
-  "version": "0.0.1",
+  "_from": "lu-proxy-loader@0.0.1",
+  "_id": "lu-proxy-loader@0.0.1",
+  "_inBundle": false,
+  "_integrity": "sha512-MNV6EK5/+vB3u4vmBCH9QAtGBjuUINjmRXohrk6tvo3d7JWJ8HqS7tjB/doY3UhE/O5kijzfwDMBrIqbwtk0cA==",
+  "_location": "/lu-proxy-loader",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "lu-proxy-loader@0.0.1",
+    "name": "lu-proxy-loader",
+    "escapedName": "lu-proxy-loader",
+    "rawSpec": "0.0.1",
+    "saveSpec": null,
+    "fetchSpec": "0.0.1"
+  },
+  "_requiredBy": [
+    "#DEV:/"
+  ],
+  "_resolved": "https://registry.npmjs.org/lu-proxy-loader/-/lu-proxy-loader-0.0.1.tgz",
+  "_shasum": "b96e56f2fcd45d186037958c6f1dcb92a5ca2017",
+  "_spec": "lu-proxy-loader@0.0.1",
+  "_where": "/Users/fengchao/workspace/lufax/gulp-webpack-react-boilerplate",
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/randoll127/lu-proxy-loader/issues"
+  },
+  "bundleDependencies": false,
+  "deprecated": false,
   "description": "proxy loader for webpack-loader",
+  "homepage": "https://github.com/randoll127/lu-proxy-loader#readme",
+  "license": "ISC",
   "main": "index.js",
+  "name": "lu-proxy-loader",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/randoll127/lu-proxy-loader.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:randoll127/lu-proxy-loader.git"
-  },
-  "author": "",
-  "license": "ISC"
+  "version": "0.0.1"
 }
